--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ h3 {
     text-align: center;
 }
 
+.main {
+    min-height:330px; 
+    min-width: 350px;
+}
+
 #app-name {
     background: url(../resouces/images/header.jpg);
     color: white;
@@ -20,7 +25,9 @@ h3 {
 .header {
     padding-top: 4%;
     padding-left: 4%;
+    padding-bottom: 4%;
     display: block;
+    border-bottom: 1px solid #f0f0f0;
 }
 
 
@@ -30,10 +37,93 @@ h3 {
     text-align: center;
     float: right;
     overflow: auto;
+    padding-left: 3%;
+    padding-right: 2.5%;
 }
 
 #link {
     color: white;
-    font-size: 75%;
+    font-size: 85%;
 
+}
+
+.switch {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 24px;
+    float: right;
+
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(25px);
+  -ms-transform: translateX(25px);
+  transform: translateX(25px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+div.form {
+    margin: 5%;
+
+}
+
+.form-element {
+    border-bottom: 1px solid #f1f1f1;
+    padding: 3%;
+}
+
+footer {
+    border-top: 1px solid #f0f0f0;
+}
+
+#image {
+    width: 5%;
+    height: 5%;
 }
