--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,14 @@ h3 {
 
 
 .text-banner {
-    background-color: #f2d600;
+    background-color: #52307c;
     border-left: none;
     text-align: center;
     float: right;
     overflow: auto;
     padding-left: 3%;
     padding-right: 2.5%;
+    padding-bottom: 0.2%;
 }
 
 #link {
