--- a/resouces/css/style.css
+++ b/resouces/css/style.css
@@ -8,7 +8,7 @@ h3 {
 }
 
 #app-name {
-    background: url(../resouces/images/header.jpg);
+    background: url(/resouces/images/header.jpg);
     color: white;
     padding-left: 2.2%;
     padding-right: 1.2%;
@@ -125,6 +125,22 @@ footer {
 }
 
 #image {
-    width: 5%;
-    height: 5%;
+    width: 4.5%;
+    height: 4.5%;
+}
+
+#open-sheets {
+    font-style: normal;
+    color: #aaaaaa;
+    
+}
+
+div#footer {
+    padding: 2%;
+}
+
+span.link-text {
+    vertical-align: 9.5%;
+    border-right: 1px solid #f1f1f1;
+    padding-right: 4%;
 }
