--- a/production/resouces/css/style.css
+++ b/production/resouces/css/style.css
@@ -3,7 +3,7 @@ h3 {
 }
 
 .main {
-    min-height:330px; 
+    min-height:130px; 
     min-width: 350px;
 }
 
@@ -122,25 +122,111 @@ div.form {
 
 footer {
     border-top: 1px solid #f0f0f0;
+    align-content: center;
+    padding: 2%;
+    text-align: center;;
 }
 
 #image {
-    width: 4.5%;
-    height: 4.5%;
+    width: 8%;
+    height: 8%;
+    min-width: 20px;
+    min-height: 18px;
+    max-width: 200px;
+    max-height: 200px;
 }
 
-#open-sheets {
+.footer-links {
     font-style: normal;
-    color: #aaaaaa;
-    
+    color: #aaaaaa; 
+    align-content: center;
+    padding-left: 6%;
 }
 
-div#footer {
+.footer-links:hover {
+  color: #414141;
+}
+
+table#footer {
     padding: 2%;
+    align-content: center;
+    text-align: center;
+}
+
+.right-footer {
+  padding-left: 23%;
 }
 
 span.link-text {
     vertical-align: 9.5%;
-    border-right: 1px solid #f1f1f1;
-    padding-right: 4%;
+}
+
+.form-element-no-border {
+  border-bottom: 2px solid #8842d5; 
+  display: inline-block;
+  margin: 0% 0;
+  width: 100%;
+  position: relative;
+}
+
+.form-element-no-border input{
+    position: relative;
+    width: 85%;
+    box-sizing: border-box;
+    border: none;
+    height: 9%;
+    font-size: medium;
+    z-index: -1;
+    padding: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;  
+    color: grey;
+    size: 80%;
+    max-height: 30px;
+    min-height: 10px;
+}
+
+.copy-icon {
+  position: relative;
+  float: right;
+  width: 6%;
+  height: 6%;
+  max-width: 50px;
+  max-height: 50px;
+  cursor: pointer;
+  margin-bottom: 1px;
+  border: none;
+}
+
+.message {
+  color: grey;
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
+#sheet-url {
+  width: 100%;
+  height: 9%;
+  max-height: 30px;
+  min-height: 10px;
+  box-sizing: border-box;
+  border: none;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;  
+  padding: 5px;
+  font-size: medium;
+  color: grey;
+}
+
+input#sheet-url:focus{
+  color: grey;
+  outline: none;
+
 }
